Separate stages of server preparation for better diagnosis of problems (#463)
* Replace deprecated method
* Separate stages of server preparation for better diagnosis of problems